# signallayer-monorepo

./: .gitignore
signallayer-workflows/: .dockerignore  .env.development  .env.example  .gitignore  Dockerfile  Procfile  README.md  fly.toml  kill-ports.sh  pyproject.toml  transcript.md
signallayer-workflows/.agent/workflows/: user_rules.md
signallayer-workflows/data/: singapore.streets.json
signallayer-workflows/data/condos/: condo.admiralty_drive.json  condo.admiralty_link.json  condo.ah_hood_road.json  condo.aljunied_avenue_2.json  condo.aljunied_crescent.json  condo.aljunied_road.json  condo.alkaff_crescent.json  condo.anchorvale_crescent.json  condo.anchorvale_drive.json  condo.anchorvale_lane.json  condo.anchorvale_link.json  condo.anchorvale_road.json  condo.anchorvale_street.json  condo.ang_mo_kio_avenue_1.json  condo.ang_mo_kio_avenue_10.json  condo.ang_mo_kio_avenue_2.json  condo.ang_mo_kio_avenue_3.json  condo.ang_mo_kio_avenue_4.json  condo.ang_mo_kio_avenue_5.json  condo.ang_mo_kio_avenue_6.json  condo.ang_mo_kio_avenue_8.json  condo.ang_mo_kio_avenue_9.json  condo.ang_mo_kio_street_11.json  condo.ang_mo_kio_street_21.json  condo.ang_mo_kio_street_23.json  condo.ang_mo_kio_street_31.json  condo.ang_mo_kio_street_32.json  condo.ang_mo_kio_street_44.json  condo.ang_mo_kio_street_51.json  condo.ang_mo_kio_street_52.json  condo.ang_mo_kio_street_61.json  condo.bain_street.json  condo.balam_road.json  condo.bangkit_road.json  condo.beach_road.json  condo.bedok_central.json  condo.bedok_north_avenue_1.json  condo.bedok_north_avenue_2.json  condo.bedok_north_avenue_3.json  condo.bedok_north_avenue_4.json  (+537 more)
signallayer-workflows/docs/: README.md  api.md  architecture.md  decorators.md
signallayer-workflows/openspec/: project.md
signallayer-workflows/practices/: definition_of_done.md  development_practices.md  quality_practices.md  software_structure.md  testing_practices.md
signallayer-workflows/src/agent/: planner_agent.py
signallayer-workflows/src/common/: dummy_service.py  env.py  exceptions.py  injection.py  models.py  pydantic_converter.py  temporal_client.py
signallayer-workflows/src/contexts/: __init__.py  collaboration.py
signallayer-workflows/src/web/: config.py  main.py  (+3 more)
(+414 files in other folders)
